--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
       </div>
 
       <div class="opcion" data-tipo="chicharron" onclick="seleccionarProducto(this)">
-        <img src="imagenes/chicharrón.png" alt="Criollos con chicharrón">
+        <img src="imágenes/chicharrón.png" alt="Criollos con chicharrón">
         <p>Criollos con chicharrón</p>
       </div>
 
       <div class="opcion" data-tipo="cremonas" onclick="seleccionarProducto(this)">
-        <img src="imagenes/cremonas.png" alt="Cremonas">
+        <img src="imágenes/cremonas.png" alt="Cremonas">
         <p>Cremonas</p>
       </div>
 
       <div class="opcion" data-tipo="prepizza" onclick="seleccionarProducto(this)">
-        <img src="imagenes/prepizza.png" alt="Pre pizza">
+        <img src="imágenes/prepizza.png" alt="Pre pizza">
         <p>Pre pizza</p>
       </div>
 
       <div class="opcion" data-tipo="pan" onclick="seleccionarProducto(this)">
-        <img src="imagenes/pan.png" alt="Pan">
+        <img src="imágenes/pan.png" alt="Pan">
         <p>Pan</p>
       </div>
 
       <div class="opcion" data-tipo="facturas" onclick="seleccionarProducto(this)">
-        <img src="imagenes/facturas.png" alt="Facturas">
+        <img src="imágenes/facturas.png" alt="Facturas">
         <p>Facturas</p>
       </div>
     </div>
