--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
     <h2>Elegí el tipo de producto</h2>
     <div class="opciones">
       <div class="opcion" data-tipo="hojaldre" onclick="seleccionarProducto(this)">
-        <img src="imagenes/hojaldre.png" alt="Criollos de hojaldre">
+        <img src="Imagenes/hojaldre.png" alt="Criollos de hojaldre">
         <p>Criollos de hojaldre</p>
       </div>
 
       <div class="opcion" data-tipo="chicharron" onclick="seleccionarProducto(this)">
-        <img src="imágenes/chicharrón.png" alt="Criollos con chicharrón">
+        <img src="Imágenes/chicharrón.png" alt="Criollos con chicharrón">
         <p>Criollos con chicharrón</p>
       </div>
 
       <div class="opcion" data-tipo="cremonas" onclick="seleccionarProducto(this)">
-        <img src="imágenes/cremonas.png" alt="Cremonas">
+        <img src="Imágenes/cremonas.png" alt="Cremonas">
         <p>Cremonas</p>
       </div>
 
       <div class="opcion" data-tipo="prepizza" onclick="seleccionarProducto(this)">
-        <img src="imágenes/prepizza.png" alt="Pre pizza">
+        <img src="Imágenes/prepizza.png" alt="Pre pizza">
         <p>Pre pizza</p>
       </div>
 
       <div class="opcion" data-tipo="pan" onclick="seleccionarProducto(this)">
-        <img src="imágenes/pan.png" alt="Pan">
+        <img src="Imágenes/pan.png" alt="Pan">
         <p>Pan</p>
       </div>
 
       <div class="opcion" data-tipo="facturas" onclick="seleccionarProducto(this)">
-        <img src="imágenes/facturas.png" alt="Facturas">
+        <img src="Imágenes/facturas.png" alt="Facturas">
         <p>Facturas</p>
       </div>
     </div>
