--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Elegí el tipo de producto</h2>
     <div class="opciones">
       <div class="opcion" data-tipo="hojaldre" onclick="seleccionarProducto(this)">
-        <img src="Imagenes/hojaldre.png" alt="Criollos de hojaldre">
+        <img src="Imágenes/hojaldre.png" alt="Criollos de hojaldre">
         <p>Criollos de hojaldre</p>
       </div>
 
